Fixed image distortion

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -44,7 +44,7 @@
 .projectItem .bgImage {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    width: 100%;
+    width: auto;
     height: 200px;
     background-position: center;
     background-repeat: no-repeat;
